simple ui and resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.16)
 project(ICU-Browser)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/QtBrowser)
+add_subdirectory(${PROJECT_SOURCE_DIR}/src/ICU-Browser-UI)
