--- a/src/ICU-Browser-UI/CMakeLists.txt
+++ b/src/ICU-Browser-UI/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.19)
 
 project(ICU-Browser-UI VERSION 0.1 LANGUAGES CXX)
 
+include(../cmake/cef.cmake)
+include(../cmake/qt.cmake)
+include(../cmake/shared.cmake)
+
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(QT_PATH /home/liang/Qt/6.2.4/gcc_64)
-
-set(CMAKE_PREFIX_PATH ${QT_PATH})
 
 find_package(
 	Qt6 6.2 COMPONENTS
@@ -17,52 +17,19 @@ find_package(
 	REQUIRED
 )
 
-include_directories(${PROJECT_SOURCE_DIR}/../qbrowserclient ${PROJECT_SOURCE_DIR}/../qbrowserclient/include)
+include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR} ${SHARED_INCLUDE_PATH})
 
-link_directories(${PROJECT_BINARY_DIR})
+link_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 qt_add_executable(
 	ICU-Browser-UI
 	main.cpp
 	cefwindow.h cefwindow.cpp
 	resource.qrc
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/qbrowserwindow.h
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/qbrowserwindow.cc
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/qdownloadwidget.h
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/qdownloadwidget.ui
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/qdownloadwidget.cpp
-
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/clienthandler.cc
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/clienthandler.h
-
-
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/browserclient.cc
-	${PROJECT_SOURCE_DIR}/../qbrowserclient/browserclient.h
+    ${SHARED_BROWSER_SRCS}
+    ${SHARED_WINDOW_SRCS}
+    ${SHARED_DOWNLOAD_SRCS}
 )
-
-if (CMAKE_SYSTEM_NAME MATCHES "Linux")
-	set(
-		LINK_LIBRARY
-		X11
-		libcef_dll_wrapper.a
-		libcef.so
-		libEGL.so
-		libGLESv2.so
-		libvk_swiftshader.so
-		libvulkan.so.1
-	)
-elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
-	set(
-		LINK_LIBRARY
-		comctl32.lib
-		gdi32.lib
-		rpcrt4.lib
-		shlwapi.lib
-		ws2_32.lib
-		libcef_dll_wrapper.lib
-		libcef.lib
-	)
-endif ()
 
 #qt_add_qml_module(apptest3
 #    URI test3
@@ -83,10 +50,15 @@ target_compile_definitions(
 	ICU-Browser-UI
 	PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
 )
+
+COPY_FILES("${PROJECT_NAME}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CMAKE_CURRENT_BINARY_DIR}")
+COPY_FILES("${PROJECT_NAME}" "${CEF_RESOURCE_FILES}" "${CEF_RESOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}")
+
 target_link_libraries(
 	ICU-Browser-UI
 	PRIVATE Qt6::Quick
 	Qt6::Widgets
 	Qt6::QuickWidgets
-	${LINK_LIBRARY}
+    ${CEF_STANDARD_LIBS}
+    ${CEF_LIBS}
 )
