--- a/src/qbrowserclient/CMakeLists.txt
+++ b/src/qbrowserclient/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(
         ${SHARED_BROWSER_SRCS}
         ${SHARED_WINDOW_SRCS}
         ${SHARED_DOWNLOAD_SRCS}
+        ${SHARED_AB_BLOCK_SRCS}
 )
 
 COPY_FILES("${PROJECT_NAME}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CMAKE_CURRENT_BINARY_DIR}")
