--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.16)
 
 project(ICU-Browser)
 
-add_subdirectory(${PROJECT_SOURCE_DIR}/src/ad-blocker)
+#add_subdirectory(${PROJECT_SOURCE_DIR}/src/ad-blocker)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/ICU-Browser-UI)
-add_subdirectory(${PROJECT_SOURCE_DIR}/src/qbrowserclient)
+#add_subdirectory(${PROJECT_SOURCE_DIR}/src/qbrowserclient)
