--- a/src/ICU-Browser-UI/CMakeLists.txt
+++ b/src/ICU-Browser-UI/CMakeLists.txt
@@ -28,7 +28,8 @@ qt_add_executable(
     ${SHARED_BROWSER_SRCS}
     ${SHARED_WINDOW_SRCS}
     ${SHARED_DOWNLOAD_SRCS}
-    ${SHARED_FAVORITES_SRCS}
+	${SHARED_FAVORITES_SRCS}
+	${SHARED_HISTORY_SRCS}
 )
 
 #qt_add_qml_module(apptest3
