fix for windows support

--- a/src/qbrowserclient/CMakeLists.txt
+++ b/src/qbrowserclient/CMakeLists.txt
@@ -30,7 +30,7 @@ add_executable(
         ${SHARED_DOWNLOAD_SRCS}
         ${SHARED_AB_BLOCK_SRCS}
         ${SHARED_PROFILE_SRCS}
-        ${SHARED_HISTORY_SRCS}
+#        ${SHARED_HISTORY_SRCS}
 )
 
 COPY_FILES("${PROJECT_NAME}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CMAKE_CURRENT_BINARY_DIR}")
